# adreno-gpu-opengl-es-code-sample-framework

./: .gitignore  .gitmodules  03_BuildTools.bat  CONTRIBUTING.md  LICENSE  OVERVIEW.md  README.md
.github/workflows/: quic-organization-repolinter.yml
cmake/: ModelPackager.cmake  TexturePackager.cmake
include/: FrmAppContainer.h  FrmApplication.h  FrmArraySafe.h  FrmFile.h  FrmFont.h  FrmInput.h  FrmMath.h  FrmNoise.h  FrmPackedResource.h  FrmQueueCircular.h  FrmResource.h  FrmSpline.h  FrmStdLib.h  FrmUserInterface.h  FrmUtils.h
include/Android/: FrmMath_Platform.inl  FrmPlatform.h
include/Model/: FrmAnimation.h  FrmAnimationTrack.h  FrmIndexBuffer.h  FrmJoint.h  FrmMaterial.h  FrmMemoryBuffer.h  FrmMeshSurface.h  FrmMeshSurfaceArray.h  FrmModel.h  FrmModelIO.h  FrmModelMesh.h  FrmNamedId.h  FrmPointerTable.h  FrmTransform.h  FrmVertexBuffer.h  FrmVertexFormat.h  FrmVertexProperty.h  FrmVertexPropertyType.h
include/OpenGLES/: FrmFontGLES.h  FrmGLES3.h  FrmMesh.h  FrmPackedResourceGLES.h  FrmResourceGLES.h  FrmShader.h  FrmUserInterfaceGLES.h  FrmUtilsGLES.h
project/tools/: CMakeLists.txt  build.bat
samples/: BuildAndDeploy.bat
samples/amfe_power_saving/: README.md
samples/avoid_gmem_loads/: README.md
samples/hello-fw/: README.md
samples/hello_fw/: README.md
samples/hello_gltf/: README.md
samples/motion_estimation/: README.md
samples/msaa/: README.md
samples/reduce_gmem_stores/: README.md
samples/sgsr2/: README.md  (+1 more)
src/: FrmApplication.cpp  FrmFont.cpp  FrmInput.cpp  FrmPackedResource.cpp  FrmSpline.cpp  FrmUserInterface.cpp  FrmUtils.cpp
(+70 files in other folders)
